clusters/cluster/apps/verein-int/student-verification/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-verification
  namespace: verein-int
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: student-verification
  template:
    metadata:
      labels:
        app: student-verification
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: student-verification
          image: ghcr.io/neuland-ingolstadt/neuland-student-verification:build-15 # {"$imagepolicy": "flux-system:student-verification"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
